[gd_scene load_steps=2 format=3 uid="uid://cgitl26sxq0e6"]

[ext_resource type="Script" uid="uid://d1q243nptyg65" path="res://scenes/views/tag_input_container.gd" id="1_taiuy"]

[node name="TagInputContainer" type="HBoxContainer"]
offset_right = 340.0
offset_bottom = 28.0
script = ExtResource("1_taiuy")

[node name="TagInput" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "new tag"
keep_editing_on_text_submit = true

[node name="SubmitTag" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Add"
